service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
  namespace: todolist-grupo-02

spec: 
  selector:
    app: todolist

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
